package domain.game;

public interface CardAction {
    void execute(Game game, Player player);
}
