package domain.game;

public class DefaultAction implements CardAction {
    @Override
    public void execute(Game game, Player player) {
    }
}